name:                mtl-concurrent
version:             0.1.0.0
synopsis:            MTL-like library using TVars
description:         State and Writer backed by TVars.
homepage:            https://github.com/joelteon/mtl-concurrent
license:             MIT
license-file:        LICENSE
author:              Joel Taylor
maintainer:          me@joelt.io
category:            Control
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Control.Monad.State.Concurrent
                       Control.Monad.Writer.Concurrent
  build-depends:       base >=4.6 && <4.7, mtl, stm, transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
